Fix the issue in calendar alignment.

--- a/core/assets/home.css
+++ b/core/assets/home.css
@@ -209,7 +209,7 @@
 }
 .calender{
     width: 100%;
-    height: 210px;
+    height: 215px;
     background-color: #888888;
     box-shadow: 0 0.5rem 3rem rgba(0,0,0,0.4) ;
     /*padding: 0 2rem;*/
@@ -242,35 +242,38 @@
 .weeksDays{
     width: 100%;
     height: 0px;
-    padding: 0 10px;
+    padding: 0 0px;
     display: flex;
     align-items: center;
 }
 .weeksDays div{
     font-size: 15px;
     font-weight: bold;
-    width: calc(100%/7);
+    /*width: calc(100%/7);*/
+    width: 13.5%;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: 14px;
     text-shadow: 0 2px 4px rgba(0,0,0,0.5);
 }
 .days{
     width: 258px;
     display: flex;
     flex-wrap: wrap;
-    padding: 10px;
+    /*padding: 10px;*/
     /*background-color: #2f2fb0;*/
 
 }
 .days div{
     font-size: 15px;
     /*margin: 5px;*/
-    width: calc(258px/8);
+    /*width: calc(258px/8);*/
+    width: 13.5%;
     height: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
     /*background-color: #0faf44;*/
-    padding: 5px;
+    /*padding: 5px;*/
 }
